Add PluginBase Submodule
+ Added reference to PluginBase in PluginSampleCS project

--- a/Nodsoft.YumeChan.PluginSampleCS/Nodsoft.YumeChan.PluginSampleCS.csproj
+++ b/Nodsoft.YumeChan.PluginSampleCS/Nodsoft.YumeChan.PluginSampleCS.csproj
@@ -13,4 +13,8 @@
     <Copyright>MIT License</Copyright>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Nodsoft.YumeChan.PluginBase\Nodsoft.YumeChan.PluginBase.csproj" />
+  </ItemGroup>
+
 </Project>
