Add Build Config & References

--- a/Nodsoft.YumeChan.PluginSampleCS/Nodsoft.YumeChan.PluginSampleCS.csproj
+++ b/Nodsoft.YumeChan.PluginSampleCS/Nodsoft.YumeChan.PluginSampleCS.csproj
@@ -14,6 +14,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Discord.Net.Commands" Version="2.1.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Nodsoft.YumeChan.PluginBase\Nodsoft.YumeChan.PluginBase.csproj" />
   </ItemGroup>
 
