--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -1,11 +1,13 @@
 name: .NET Core
 
-on: [push]
+on: 
+  - push
+  - pull_request
 
 jobs:
   build: 
 
-    runs-on: [windows-latest]
+    runs-on: windows-latest
 
     steps:
     - uses: actions/checkout@v1
