--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -9,11 +9,17 @@ jobs:
 
     runs-on: windows-latest
 
+
     steps:
+    
     - uses: actions/checkout@v1
+      with:
+        submodules: recursive
+
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 2.2.108
+    
     - name: Build with dotnet
       run: dotnet build --configuration Release
