--- a/YumeChan.PluginSampleCS.csproj
+++ b/YumeChan.PluginSampleCS.csproj
@@ -21,6 +21,17 @@
     
   </PropertyGroup>
 
+  <!-- 
+    Build properties defined here are relevant to debugging on your machine.
+    Plugins will load on a common directory, defined by the $(YumeChan_PluginsLocation) variable.
+    You can use the $(YumeChan_PluginsLocation) variable to define the location of your plugins (define in YC3 coreconfig.json file).
+   -->
+  <PropertyGroup>
+    <OutDir>$(YumeChan_PluginsLocation)\$(MSBuildProjectName)</OutDir>
+    <OutputPath>$(YumeChan_PluginsLocation)\$(MSBuildProjectName)</OutputPath>
+    <EnableDynamicLoading>true</EnableDynamicLoading>
+  </PropertyGroup>
+  
   <ItemGroup>
     <!-- Additional dependencies can be added, in case you need extras on your plugin (like SlashCommands, and maybe a logger). -->
     <PackageReference Include="DSharpPlus.SlashCommands" Version="4.2.0" />
@@ -28,10 +39,6 @@
     
     <!-- Required dependency on YC PluginBase -->
     <PackageReference Include="YumeChan.PluginBase" Version="3.0.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    
   </ItemGroup>
 
 </Project>
